<resources>
    <string name="app_name">NewsApp</string>
    <string name="news_title_example">Tesla removes dates about Cybertruck production from its website</string>
    <string name="news_descrption_example">Elon Musk-owned electric vehicle company Tesla has reportedly removed the dates about Cybertruck production from its website.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="news_fragment_title">News</string>
    <string name="history_fragment_title">History</string>
    <string name="favorites_fragment_title">Favorites</string>
    <string name="settings_fragment_title">Settings</string>

    <string name="no_internet_connection">No Internet Connection! Please, check your internet connection</string>
    <string name="politics">Politics</string>
    <string name="sport">Sport</string>
    <string name="nature">Nature</string>
    <string name="science">Science</string>
    <string name="select_categories_title">Select the news categories you want to see on your home screen:</string>
    <string name="delete">Delete</string>
    
    <string name="article_delete_message">Article was deleted</string>
</resources>