<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="16dp"
        android:elevation="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:lineHeight="24dp"
            android:text="@string/select_categories_title"
            android:textColor="@color/tab_indicator_color"
            tools:targetApi="p" />
    </androidx.cardview.widget.CardView>
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="16dp"
        android:elevation="8dp">
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/politicsCheckBox"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/politics"
                android:textSize="16sp"
                android:textColor="@color/tab_indicator_color"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/sportCheckBox"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/sport"
                android:textSize="16sp"
                android:textColor="@color/tab_indicator_color"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/natureCheckBox"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/nature"
                android:textSize="16sp"
                android:textColor="@color/tab_indicator_color"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/scienceCheckBox"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/science"
                android:textSize="16sp"
                android:background="@drawable/checkbox_background"
                android:textColor="@color/tab_indicator_color"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>